Add changes in test data for "package_data" renaming #2843
Regenate tests after "package_manifests" -> "package_data" renaming
and add the corresponding chages to the test files.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -46,7 +46,7 @@ files:
     copyrights: []
     holders: []
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: 1
     dirs_count: '0'
@@ -82,7 +82,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
