--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -53,7 +53,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -89,7 +89,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -125,7 +125,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -155,7 +155,7 @@ files:
     copyrights: []
     holders: []
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: 4
     dirs_count: '0'
@@ -191,7 +191,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -227,7 +227,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -263,7 +263,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
@@ -299,7 +299,7 @@ files:
         start_line: 1
         end_line: 1
     authors: []
-    package_manifests: []
+    package_data: []
     for_packages: []
     files_count: '0'
     dirs_count: '0'
