--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ where=src
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
+    black
 docs=
     Sphinx>=3.3.1
     sphinx-rtd-theme>=0.5.0
