Modifies test expectations #2843
Regenerates test expectations with top-level `dependencies` list.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -20,6 +20,7 @@ headers:
     extra_data:
       spdx_license_list_version: '3.14'
       files_count: 1
+dependencies: []
 packages: []
 files:
   - path: simple
