--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,14 @@ jobs:
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: macos11_cpython
+          image_name: macos-11
+          python_versions: ['3.6', '3.7', '3.8', '3.9', '3.10']
+          test_suites:
+              all: venv/bin/pytest -n 2 -vvs
+
     - template: etc/ci/azure-win.yml
       parameters:
           job_name: win2019_cpython
