Correct license and rules metadadata
Some fields were redundant or incorrect such as a with trailing spaces

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/amazon-sl.yml
+++ b/src/licensedcode/data/licenses/amazon-sl.yml
@@ -5,7 +5,7 @@ category: Proprietary Free
 owner: Amazon Web Services
 homepage_url: http://aws.amazon.com/asl/
 spdx_license_key: LicenseRef-.amazon.com.-AmznSL-1.0
-other_spdx_license_key:
+other_spdx_license_keys:
     - LicenseRef-scancode-amazon-sl
 text_urls:
     - http://aws.amazon.com/asl/
