Also always use importlib_metadata on all Python versions.
This is bundled in Python 3.9+ but there are subtle differences that
make it more efficienyt to use the external library.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -68,8 +68,7 @@ install_requires =
     ftfy >=  4.0.0
     gemfileparser >= 0.7.0
     html5lib
-    # should we always use this rather than the built in code?
-    importlib_metadata; python_version < "3.9"
+    importlib_metadata
     intbitset >= 2.3.0
     jaraco.functools
     javaproperties >= 0.5
