--- a/src/licensedcode/data/rules/proprietary_arachni2.yml
+++ b/src/licensedcode/data/rules/proprietary_arachni2.yml
@@ -1,4 +1,4 @@
-license_expression: proprietary-license
+license_expression: arachni-psl-1.0
 is_license_reference: yes
 relevance: 100
 minimum_coverage: 95
