Sync both setup formats
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,6 @@ zip_safe = false
 py_modules =
     scancode_config
 
-
 python_requires = >=3.6.*
 
 install_requires =
@@ -111,18 +110,24 @@ install_requires =
     urlpy
     xmltodict >= 0.11.0
     zipp >= 3.0.0; python_version < "3.9"
+    typecode >= 21.6.1
     typecode[full] >= 21.6.1
     extractcode[full] >= 21.7.23
+
 
 [options.packages.find]
 where = src
 
+
 [options.extras_require]
+full =
+    typecode[full] >= 21.6.1
+    extractcode[full] >= 21.7.23
+
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
     aboutcode-toolkit >= 6.0.0
-
 
 docs =
     Sphinx >= 3.3.1
