--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,15 @@
 [metadata]
-license_files =
-    apache-2.0.LICENSE
-    NOTICE
-    AUTHORS.rst
-    CHANGELOG.rst
 name = skeleton
-author = nexB. Inc. and others
-author_email = info@aboutcode.org
 license = Apache-2.0
 
 # description must be on ONE line https://github.com/pypa/setuptools/issues/1390
 description = skeleton
 long_description = file:README.rst
 url = https://github.com/nexB/skeleton
+
+author = nexB. Inc. and others
+author_email = info@aboutcode.org
+
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
@@ -20,27 +17,42 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Topic :: Software Development
     Topic :: Utilities
+
 keywords =
     utilities
 
+license_files =
+    apache-2.0.LICENSE
+    NOTICE
+    AUTHORS.rst
+    CHANGELOG.rst
+
 [options]
-package_dir=
+package_dir =
     =src
-packages=find:
+packages = find:
 include_package_data = true
 zip_safe = false
-install_requires =
+
 setup_requires = setuptools_scm[toml] >= 4
 
+python_requires = >=3.6.*
+
+install_requires =
+
+
 [options.packages.find]
-where=src
+where = src
+
 
 [options.extras_require]
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
+    aboutcode-toolkit >= 6.0.0
     black
-docs=
-    Sphinx>=3.3.1
-    sphinx-rtd-theme>=0.5.0
-    doc8>=0.8.1
+
+docs =
+    Sphinx >= 3.3.1
+    sphinx-rtd-theme >= 0.5.0
+    doc8 >= 0.8.1
