--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,10 @@
-aboutcode-toolkit==6.0.0
-apipkg==2.1.0
-pytest==6.2.5
+aboutcode-toolkit==7.0.0
+et-xmlfile==1.1.0
+execnet==1.9.0
+iniconfig==1.1.1
+openpyxl==3.0.9
+py==1.11.0
+pytest==7.0.1
+pytest-forked==1.4.0
 pytest-xdist==2.5.0
+tomli==1.2.3
