--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ license = Apache-2.0
 # description must be on ONE line https://github.com/pypa/setuptools/issues/1390
 description = skeleton
 long_description = file:README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/nexB/skeleton
 
 author = nexB. Inc. and others
