--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -6,6 +6,7 @@ license = Apache-2.0 AND CC-BY-4.0 AND LicenseRef-scancode-other-permissive AND 
 # description must be on ONE line https://github.com/pypa/setuptools/issues/1390
 description = ScanCode is a tool to scan code for license, copyright, package and their documented dependencies and other interesting facts. scancode-toolkit-mini is a special build that does not come with pre-built binary dependencies by default. These are instead installed separately or with the extra_requires scancode-toolkit-mini[full]
 long_description = file:README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/nexB/scancode-toolkit
 
 author = nexB. Inc. and others
@@ -174,6 +175,7 @@ scancode_scan =
 # module for details and doc.
 scancode_post_scan =
     summary = summarycode.summarizer:ScanSummary
+    summary2 = summarycode.summarizer2:ScanSummary
     summary-keeping-details = summarycode.summarizer:ScanSummaryWithDetails
     summary-key-files = summarycode.summarizer:ScanKeyFilesSummary
     summary-by-facet = summarycode.summarizer:ScanByFacetSummary
