Add tests for XML plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -207,6 +207,7 @@ scancode_output =
     html = formattedcode.output_html:HtmlOutput
     html-app = formattedcode.output_html:HtmlAppOutput
     json = formattedcode.output_json:JsonCompactOutput
+    xml = formattedcode.output_xml:XmlOutput
     json-pp = formattedcode.output_json:JsonPrettyOutput
     spdx-tv = formattedcode.output_spdx:SpdxTvOutput
     spdx-rdf = formattedcode.output_spdx:SpdxRdfOutput
