--- a/setup.cfg
+++ b/setup.cfg
@@ -177,10 +177,10 @@ scancode_scan =
 # module for details and doc.
 scancode_post_scan =
     summary = summarycode.summarizer:ScanSummary
-    summary-legacy = summarycode.summarizer_legacy:ScanSummaryLegacy
-    summary-keeping-details = summarycode.summarizer_legacy:ScanSummaryWithDetails
-    summary-key-files = summarycode.summarizer_legacy:ScanKeyFilesSummary
-    summary-by-facet = summarycode.summarizer_legacy:ScanByFacetSummary
+    tallies = summarycode.tallies:Tallies
+    tallies-with-details = summarycode.tallies:TalliesWithDetails
+    tallies-key-files = summarycode.tallies:KeyFilesTallies
+    tallies-by-facet = summarycode.tallies:FacetTallies
     license-clarity-score = summarycode.score:LicenseClarityScore
     license-policy = licensedcode.plugin_license_policy:LicensePolicy
     mark-source = scancode.plugin_mark_source:MarkSource
