--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -69,7 +69,8 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 30.0.0
+    commoncode >= 30.1.1
+    container-inspector >= 30.0.0
     debian-inspector >= 30.0.0
     dparse2 >= 0.6.0
     fasteners
@@ -175,14 +176,13 @@ scancode_scan =
 # module for details and doc.
 scancode_post_scan =
     summary = summarycode.summarizer:ScanSummary
-    summary2 = summarycode.summarizer2:ScanSummary
-    summary-keeping-details = summarycode.summarizer:ScanSummaryWithDetails
-    summary-key-files = summarycode.summarizer:ScanKeyFilesSummary
-    summary-by-facet = summarycode.summarizer:ScanByFacetSummary
+    tallies = summarycode.tallies:Tallies
+    tallies-with-details = summarycode.tallies:TalliesWithDetails
+    tallies-key-files = summarycode.tallies:KeyFilesTallies
+    tallies-by-facet = summarycode.tallies:FacetTallies
     license-clarity-score = summarycode.score:LicenseClarityScore
     license-policy = licensedcode.plugin_license_policy:LicensePolicy
     mark-source = scancode.plugin_mark_source:MarkSource
-    classify-package = summarycode.classify:PackageTopAndKeyFilesTagger
     is-license-text = licensedcode.plugin_license_text:IsLicenseText
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
