--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ install_requires =
     click >= 6.7, !=7.0
     colorama >= 0.3.9
     commoncode >= 30.1.1
+    container-inspector >= 30.0.0
     debian-inspector >= 30.0.0
     dparse2 >= 0.6.0
     fasteners
@@ -184,7 +185,6 @@ scancode_post_scan =
     license-clarity-score = summarycode.score:LicenseClarityScore
     license-policy = licensedcode.plugin_license_policy:LicensePolicy
     mark-source = scancode.plugin_mark_source:MarkSource
-    classify-package = summarycode.classify:PackageTopAndKeyFilesTagger
     is-license-text = licensedcode.plugin_license_text:IsLicenseText
     filter-clues = cluecode.plugin_filter_clues:RedundantCluesFilter
     consolidate = summarycode.plugin_consolidate:Consolidator
