Ensure that license name is unique, ignoring case
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/scilab-fr.yml
+++ b/src/licensedcode/data/licenses/scilab-fr.yml
@@ -1,7 +1,7 @@
 key: scilab-fr
 language: fr
-short_name: SCILAB
-name: SCILAB License
+short_name: SCILAB FR
+name: Licence SCILAB
 category: Proprietary Free
 owner: INRIA/ENPC
 homepage_url: http://web.archive.org/web/20051212214843/http://www.scilab.org/legal/license.html
