--- a/src/licensedcode/data/licenses/cecill-2.1-fr.yml
+++ b/src/licensedcode/data/licenses/cecill-2.1-fr.yml
@@ -2,6 +2,7 @@ key: cecill-2.1-fr
 short_name: CeCILL 2.1 French
 name: CeCILL Free Software License Agreement v2.1 French
 category: Copyleft Limited
+language: fr
 owner: CeCILL
 homepage_url: http://www.cecill.info/licences/Licence_CeCILL_V2.1-fr.html
 spdx_license_key: LicenseRef-scancode-cecill-2.1-fr
