Load and validate language codes in licenses
* Use Django's language codes mapping, extracted and vendored
* Also load an validate validate in license rules.
* Fix language codes where needed

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/cc-by-sa-2.1-jp.yml
+++ b/src/licensedcode/data/licenses/cc-by-sa-2.1-jp.yml
@@ -1,5 +1,5 @@
 key: cc-by-sa-2.1-jp
-language: jp
+language: ja
 short_name: Creative Commons Attribution Share Alike 2.1 Japan
 name: Creative Commons Attribution Share Alike 2.1 Japan
 category: Copyleft Limited
