Improve GH action documentation
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -1,4 +1,4 @@
-name: Release library as a PyPI wheel and sdist on tag
+name: Release library as a PyPI wheel and sdist on GH release creation
 
 on:
   release:
