--- a/setup.cfg
+++ b/setup.cfg
@@ -130,6 +130,7 @@ testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
     aboutcode-toolkit >= 6.0.0
+    twine
 
 docs =
     Sphinx >= 3.3.1
