Add twine to development deps
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -128,6 +128,7 @@ testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
     aboutcode-toolkit >= 6.0.0
+    twine >= 4.0.0
 
 docs =
     Sphinx >= 3.3.1
