--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -79,7 +79,7 @@ install_requires =
     gemfileparser >= 0.7.0
     html5lib
     importlib_metadata
-    intbitset >= 2.3.0
+    intbitset >= 3.0.0
     jaraco.functools
     javaproperties >= 0.5
     jinja2 >= 2.7.0
@@ -99,7 +99,7 @@ install_requires =
     pluggy >= 0.12.0
     plugincode >= 21.1.21
     publicsuffix2
-    pyahocorasick >= 1.4.0
+    pyahocorasick >= 2.0.0b1
     pygmars >= 0.7.0
     pygments
     pymaven_patch >= 0.2.8
