--- a/setup.cfg
+++ b/setup.cfg
@@ -89,9 +89,8 @@ install_requires =
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
     packaging >= 21.0.0
-    # parameter_expansion >= 0.2.0
     # use temp advanced patched release
-	parameter-expansion-patched >= 0.2.1b4
+	parameter-expansion-patched >= 0.3.0
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
     pkginfo2 >= 30.0.0
