--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,50 @@
 attrs==21.4.0
 banal==1.0.6
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
 binaryornot==0.4.4
 boolean.py==3.8
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
-click==8.0.4
+click==8.1.3
 colorama==0.4.4
 commoncode==30.2.0
 construct==2.10.68
-cryptography==36.0.1
+container-inspector==30.0.0
+cryptography==36.0.2
 debian-inspector==30.0.0
+dockerfile-parse==1.2.0
 dparse2==0.6.0
 extractcode==30.0.0
 extractcode-7z==16.5.210531
 extractcode-libarchive==3.5.1.210531
 fasteners==0.17.3
 fingerprints==1.0.3
-ftfy==6.0.3
+ftfy==6.1.1
 future==0.18.2
 gemfileparser==0.8.0
 html5lib==1.1
 idna==3.3
-importlib-metadata==4.8.3
+importlib-metadata==4.11.3
 inflection==0.5.1
 intbitset==3.0.1
 isodate==0.6.1
-jaraco.functools==3.4.0
+jaraco.functools==3.5.0
 javaproperties==0.8.1
-Jinja2==3.0.3
+Jinja2==3.1.2
 jsonstreams==0.6.0
 license-expression==21.6.14
 lxml==4.8.0
 MarkupSafe==2.0.1
-more-itertools==8.12.0
-normality==2.3.0
+more-itertools==8.13.0
+normality==2.3.3
 packagedcode-msitools==0.101.210706
 packageurl-python==0.9.9
 packaging==21.3
 parameter-expansion-patched==0.3.1
 patch==1.16
-pdfminer.six==20211012
+pdfminer.six==20220506
 pefile==2021.9.3
 pip-requirements-parser==31.2.0
 pkginfo2==30.0.0
@@ -53,27 +55,26 @@ publicsuffix2==2.20191221
 pyahocorasick==2.0.0b1
 pycparser==2.21
 pygmars==0.7.0
-Pygments==2.11.2
+Pygments==2.12.0
 pymaven-patch==0.3.0
-pyparsing==3.0.7
-pytz==2021.3
+pyparsing==3.0.8
+pytz==2022.1
 PyYAML==6.0
-rdflib==5.0.0
+rdflib==6.1.1
 regipy==2.2.2
 requests==2.27.1
 rpm-inspector-rpm==4.16.1.3.210404
 saneyaml==0.5.2
 six==1.16.0
-sortedcontainers==2.4.0
 soupsieve==2.3.1
 spdx-tools==0.7.0a3
 text-unidecode==1.3
 toml==0.10.2
 typecode==21.6.1
 typecode-libmagic==5.39.210531
-urllib3==1.26.8
+urllib3==1.26.9
 urlpy==0.5
 wcwidth==0.2.5
 webencodings==0.5.1
 xmltodict==0.12.0
-zipp==3.6.0
+zipp==3.8.0
