Include source for native builds
* in GH actiona nd release script, we now also include the source code
  of key packages with native code. This should help improve
  compatibility
* also build archives for Python 3.8, not 3.9

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -159,6 +159,10 @@ jobs:
             --python-version=$python_version \
             --operating-system=$operating_system \
             --wheels
+          venv/bin/python etc/scripts/fetch_thirdparty.py \
+            --requirements=requirements-native.txt \
+            --dest=thirdparty \
+            --sdists
           venv/bin/python setup.py --quiet sdist --formats=$formats 
           venv/bin/python etc/release/scancode_rename_archives.py dist/ _py$python_version-$operating_system
 
@@ -210,6 +214,10 @@ jobs:
             --python-version=$python_version \
             --operating-system=$operating_system \
             --wheels
+          venv/bin/python etc/scripts/fetch_thirdparty.py \
+            --requirements=requirements-native.txt \
+            --dest=thirdparty \
+            --sdists
           venv/bin/python setup.py --quiet sdist --formats=$formats 
           venv/bin/python etc/release/scancode_rename_archives.py dist/ _py$python_version-$operating_system
  
@@ -260,6 +268,10 @@ jobs:
             --python-version=$python_version \
             --operating-system=$operating_system \
             --wheels
+          venv/bin/python etc/scripts/fetch_thirdparty.py \
+            --requirements=requirements-native.txt \
+            --dest=thirdparty \
+            --sdists
           venv/bin/python setup.py --quiet sdist --formats=$formats 
           venv/bin/python etc/release/scancode_rename_archives.py dist/ _py$python_version-$operating_system
  
