Pin commoncode and plugincode for now
Until the beta cycle is completed

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -65,11 +65,11 @@ python_requires = >=3.6.*
 install_requires =
     attrs >= 18.1, !=20.1.0
     Beautifulsoup4 >= 4.0.0
-    boolean.py >= 3.5
+    boolean.py >= 4.0
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 30.2.0
+    commoncode==31.0.0b4
     container-inspector >= 31.0.0
     debian-inspector >= 30.0.0
     dparse2 >= 0.6.1
@@ -84,7 +84,7 @@ install_requires =
     javaproperties >= 0.5
     jinja2 >= 2.7.0
     jsonstreams >= 0.5.0
-    license_expression >= 21.6.14
+    license_expression >= 30.0.0
     lxml >= 4.6.5
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
@@ -96,7 +96,7 @@ install_requires =
     pkginfo2 >= 30.0.0
     pip-requirements-parser >= 31.2.0
     pluggy >= 1.0.0
-    plugincode >= 30.0.0
+    plugincode==31.0.0b1
     publicsuffix2
     pyahocorasick >= 2.0.0b1
     pygmars >= 0.7.0
@@ -126,7 +126,7 @@ full =
 testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
-    aboutcode-toolkit >= 6.0.0
+    aboutcode-toolkit >= 7.0.2
     twine
 
 docs =
