--- a/setup.cfg
+++ b/setup.cfg
@@ -69,7 +69,7 @@ install_requires =
     chardet >= 3.0.0
     click >= 6.7, !=7.0
     colorama >= 0.3.9
-    commoncode >= 30.2.0
+    commoncode==31.0.0b4
     container-inspector >= 31.0.0
     debian-inspector >= 30.0.0
     dparse2 >= 0.6.1
@@ -96,7 +96,7 @@ install_requires =
     pkginfo2 >= 30.0.0
     pip-requirements-parser >= 31.2.0
     pluggy >= 1.0.0
-    plugincode >= 30.0.0
+    plugincode==31.0.0b1
     publicsuffix2
     pyahocorasick >= 2.0.0b1
     pygmars >= 0.7.0
