--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -23,9 +23,9 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.4.0-109-generic-x86_64-with-Ubuntu-18.04-bionic
-        platform_version: '#123~18.04.1-Ubuntu SMP Fri Apr 8 09:48:52 UTC 2022'
-        python_version: "3.6.9 (default, Mar 15 2022, 13:55:28) \n[GCC 8.4.0]"
+        platform: Linux-5.14.0-1032-oem-x86_64-with-glibc2.29
+        platform_version: '#35-Ubuntu SMP Thu Mar 31 12:49:29 UTC 2022'
+        python_version: "3.8.10 (default, Mar 15 2022, 12:22:08) \n[GCC 9.4.0]"
       spdx_license_list_version: '3.16'
       files_count: 7
 dependencies: []
@@ -50,7 +50,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -86,7 +88,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -122,7 +126,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -158,7 +164,9 @@ files:
     is_source: no
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights: []
     holders: []
@@ -188,7 +196,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -224,7 +234,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -260,7 +272,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
@@ -296,7 +310,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    license_clues: []
     license_expressions: []
+    spdx_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
