--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -22,8 +22,8 @@ headers:
       system_environment:
         operating_system: linux
         cpu_architecture: 64
-        platform: Linux-5.14.0-1032-oem-x86_64-with-glibc2.29
-        platform_version: '#35-Ubuntu SMP Thu Mar 31 12:49:29 UTC 2022'
+        platform: Linux-5.14.0-1038-oem-x86_64-with-glibc2.29
+        platform_version: '#42-Ubuntu SMP Thu May 19 05:03:08 UTC 2022'
         python_version: "3.8.10 (default, Mar 15 2022, 12:22:08) \n[GCC 9.4.0]"
       spdx_license_list_version: '3.16'
       files_count: 1
@@ -48,10 +48,10 @@ files:
     is_media: no
     is_source: no
     is_script: no
-    licenses: []
+    license_detections: []
     license_clues: []
-    license_expressions: []
-    spdx_license_expressions: []
+    detected_license_expression:
+    detected_license_expression_spdx:
     percentage_of_license_text: '0'
     copyrights: []
     holders: []
@@ -80,10 +80,10 @@ files:
     is_media: no
     is_source: yes
     is_script: no
-    licenses: []
+    license_detections: []
     license_clues: []
-    license_expressions: []
-    spdx_license_expressions: []
+    detected_license_expression:
+    detected_license_expression_spdx:
     percentage_of_license_text: '0'
     copyrights:
       - copyright: Copyright (c) 2000 ACME, Inc.
