--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,7 @@ install_requires =
     colorama >= 0.3.9
     commoncode==31.0.0b4
     container-inspector >= 31.0.0
-    debian-inspector >= 30.0.0
+    debian-inspector >= 31.0.0b1
     dparse2 >= 0.6.1
     fasteners
     fingerprints >= 0.6.0
