--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -71,7 +71,7 @@ install_requires =
     colorama >= 0.3.9
     commoncode==31.0.0b4
     container-inspector >= 31.0.0
-    debian-inspector >= 30.0.0
+    debian-inspector >= 31.0.0b1
     dparse2 >= 0.6.1
     fasteners
     fingerprints >= 0.6.0
@@ -112,6 +112,8 @@ install_requires =
     xmltodict >= 0.11.0
     zipp >= 3.0.0; python_version < "3.9"
     typecode >= 30.0.0
+#    typecode[full] >= 30.0.0
+#    extractcode[full] >= 31.0.0
 
 
 [options.packages.find]
@@ -128,6 +130,8 @@ testing =
     pytest-xdist >= 2
     aboutcode-toolkit >= 7.0.2
     twine
+    black
+    isort
 
 docs =
     Sphinx >= 3.3.1
