--- a/src/licensedcode/data/licenses/liliq-rplus-1.1.yml
+++ b/src/licensedcode/data/licenses/liliq-rplus-1.1.yml
@@ -7,3 +7,5 @@ owner: Quebec
 homepage_url: http://opensource.org/licenses/LiLiQ-Rplus-1.1
 spdx_license_key: LiLiQ-Rplus-1.1
 osi_url: https://opensource.org/licenses/LiLiQ-Rplus-1.1
+other_urls:
+    - https://www.forge.gouv.qc.ca/participez/licence-logicielle/licence-libre-du-quebec-liliq-en-francais/licence-libre-du-quebec-reciprocite-forte-liliq-r-v1-1/
