--- a/src/licensedcode/data/licenses/liliq-r-1.1.yml
+++ b/src/licensedcode/data/licenses/liliq-r-1.1.yml
@@ -7,3 +7,6 @@ owner: Quebec
 homepage_url: https://opensource.org/licenses/LiLiQ-R-1.1
 spdx_license_key: LiLiQ-R-1.1
 osi_url: https://opensource.org/licenses/LiLiQ-R-1.1
+other_urls:
+    - http://opensource.org/licenses/LiLiQ-R-1.1
+    - https://www.forge.gouv.qc.ca/participez/licence-logicielle/licence-libre-du-quebec-liliq-en-francais/licence-libre-du-quebec-reciprocite-liliq-r-v1-1/
