--- a/src/licensedcode/data/licenses/baekmuk-fonts.yml
+++ b/src/licensedcode/data/licenses/baekmuk-fonts.yml
@@ -3,7 +3,12 @@ short_name: Baekmuk Fonts License
 name: Baekmuk Fonts License
 category: Permissive
 owner: Unspecified
-spdx_license_key: LicenseRef-scancode-baekmuk-fonts
+spdx_license_key: Baekmuk
+other_urls:
+    - https://fedoraproject.org/wiki/Licensing:Baekmuk?rd=Licensing/Baekmuk
+
+other_spdx_license_keys:
+    - LicenseRef-scancode-baekmuk-fonts
 ignorable_copyrights:
     - Copyright (c) Kim Jeong-Hwan
 ignorable_holders:
