Use correct syntax for new license rules
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/bitstream-vera.yml
+++ b/src/licensedcode/data/rules/bitstream-vera.yml
@@ -1,5 +1,5 @@
-license_expressions:
-    - bitstream
+license_expression: bitstream
+is_license_text: yes
 ignorable_copyrights:
     - Copyright (c) 2003 by Bitstream, Inc.
 ignorable_holders:
