--- a/src/licensedcode/data/licenses/bsd-new.yml
+++ b/src/licensedcode/data/licenses/bsd-new.yml
@@ -6,6 +6,8 @@ owner: Regents of the University of California
 homepage_url: http://www.opensource.org/licenses/BSD-3-Clause
 notes: Per SPDX.org, this license is OSI certified.
 spdx_license_key: BSD-3-Clause
+other_spdx_license_keys:
+    - LicenseRef-scancode-libzip
 text_urls:
     - http://www.opensource.org/licenses/BSD-3-Clause
 osi_url: http://www.opensource.org/licenses/BSD-3-Clause
