--- a/src/licensedcode/data/rules/etalab-2.0_13.yml
+++ b/src/licensedcode/data/rules/etalab-2.0_13.yml
@@ -1,5 +1,5 @@
-license_expression: etalab-2.0
+license_expression: etalab-2.0 AND unknown-license-reference
 is_license_notice: yes
-relevance: 99
+relevance: 80
 referenced_filenames:
     - LICENSE.md
