--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,7 @@ jobs:
                   --ignore=tests/licensedcode/test_detection_datadriven2.py \
                   --ignore=tests/licensedcode/test_detection_datadriven3.py \
                   --ignore=tests/licensedcode/test_detection_datadriven4.py \
+                  --ignore=tests/licensedcode/test_installed_license_detection.py \
                   tests/licensedcode
 
               license_datadriven1_2: |
@@ -168,6 +169,11 @@ jobs:
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs tests\scancode\test_cli.py
 
+    - template: etc/ci/azure-installed-external-license.yml
+      parameters:
+          job_name: installed_external_license
+          image_name: ubuntu-20.04
+          python_versions: ['3.8']
 
 ################################################################################
 # Test using many version of Click to work around any regressions in their API
