--- a/src/licensedcode/data/rules/linux-syscall-exception-gpl_2.yml
+++ b/src/licensedcode/data/rules/linux-syscall-exception-gpl_2.yml
@@ -1,5 +1,6 @@
 license_expression: linux-syscall-exception-gpl
 is_license_text: yes
+minimum_coverage: 70
 relevance: 100
 notes: from https://raw.githubusercontent.com/pombredanne/gpl-history/v1.0/allvers/linux.COPYING.0.4
 ignorable_copyrights:
